--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -173,10 +173,12 @@ fade_1.start();
 anim_1 =
 new move_anim(
 g_sequence_manager);
+        var anim_1 = anim_1;
             anim_1.parent_sequence = null;
 fade_1 =
 new fade_anim(
 g_sequence_manager);
+        var fade_1 = fade_1;
             fade_1.parent_sequence = null;
 	application.init = function() 
 	{
