--- a/xss/production/test/box2d3.html
+++ b/xss/production/test/box2d3.html
@@ -12,7 +12,8 @@
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-        <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script>
+        <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script> 
+		<script type="text/javascript" src="../js/ms-joint.js"></script> 
             <script type="text/javascript" src="../js/ms-spawner.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
@@ -48,13 +49,20 @@ var Sound = new ms.ui.Sound();
         ,	b2PolygonShape = Box2D.Collision.Shapes.b2PolygonShape
         ,	b2CircleShape = Box2D.Collision.Shapes.b2CircleShape
         ,	b2DebugDraw = Box2D.Dynamics.b2DebugDraw
-        ,  b2MouseJointDef =  Box2D.Dynamics.Joints.b2MouseJointDef
-        , b2Transform = Box2D.Common.Math.b2Transform
+        ,  	b2MouseJointDef =  Box2D.Dynamics.Joints.b2MouseJointDef
+        , 	b2Transform = Box2D.Common.Math.b2Transform
+		,	b2RevoluteJointDef = Box2D.Dynamics.Joints.b2RevoluteJointDef
+		,	b2Joint = Box2D.Dynamics.Joints.b2Joint
+		,	b2PrismaticJointDef = Box2D.Dynamics.Joints.b2PrismaticJointDef
+		,	b2PulleyJointDef = Box2D.Dynamics.Joints.b2PulleyJointDef
+		,	b2WeldJointDef = Box2D.Dynamics.Joints.b2WeldJointDef
+		,	b2LineJointDef = Box2D.Dynamics.Joints.b2LineJointDef
+		,	b2DistanceJointDef = Box2D.Dynamics.Joints.b2DistanceJointDef
         ;
         var g_world = new b2World(
             new b2Vec2(0, 10)    //gravity
         ,  true                 //allow sleep
-        );
+        );		
             var g_spawner_manager = new ms.arcade.SpawnManager();
         var g_step_collisions = [];
         var contactListener = new Box2D.Dynamics.b2ContactListener;
@@ -167,7 +175,7 @@ function start(resolution)
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
-	}
+	}    
 	window.setTimeout(updater, resolution);  
 }  
             smiley_ball = Class.create(ms.ui.Image,
@@ -180,7 +188,6 @@ function start(resolution)
         src? src : "images/smile_grin_48.png"        );
         this.events = new ms.event.EventHolder(); 
                 this.size(50, 50);
-                var __physics1;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
@@ -211,7 +218,6 @@ function start(resolution)
                         this.parent.removeComponent(this);
                     }
                 }
-                __physics1 = this.__physics1;
 	var ev_parent = this;
 	this.events.addListener("collision", function(who)
 	{    
@@ -252,14 +258,18 @@ window.onload = function()
 	};	
 		    __img1 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
+        var __img1 = __img1;
                 __img1.rect(0, 390, 600, 40);
 		    __img2 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
+        var __img2 = __img2;
                 __img2.rect(590, 350, 10, 40);
 		    __img3 = new ms.ui.Image( 
 	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
+        var __img3 = __img3;
                 __img3.rect(0, 350, 10, 40);
         sp1 = new ms.arcade.Spawner(g_spawner_manager, 100, 100, 1, 1);
+        var sp1 = sp1;
                 sp1.x = 100;
                 sp1.y = 100;
                 sp1.set_rotation(95);
