--- a/xss/production/test/box2dcar.html
+++ b/xss/production/test/box2dcar.html
@@ -12,7 +12,8 @@
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-        <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script> 		<script type="text/javascript" src="../js/ms-joint.js"></script> 
+        <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script> 
+		<script type="text/javascript" src="../js/ms-joint.js"></script> 
             <script type="text/javascript" src="../js/ms-spawner.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
@@ -61,15 +62,7 @@ var Sound = new ms.ui.Sound();
         var g_world = new b2World(
             new b2Vec2(0, 0)    //gravity
         ,  true                 //allow sleep
-        );
-		var g_physics_data = 
-		{
-			friction: 0,
-			density: 1,
-			restitution: 0.200000003,
-			angular_damping: 0,
-			linear_damping: 0,
-		}; 
+        );		
             var g_spawner_manager = new ms.arcade.SpawnManager();
         var g_step_collisions = [];
         var contactListener = new Box2D.Dynamics.b2ContactListener;
@@ -202,20 +195,13 @@ function start(resolution)
         src? src : "images/car.png"        );
         this.events = new ms.event.EventHolder(); 
                 this.size(50, 100);
-                var __physics2;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
                         g_world.DestroyBody(cmp.physics);
-			if(g_physics_data.angular_damping)
-				bodyDef.angularDamping = g_physics_data.angular_damping;
-			if(g_physics_data.linear_damping)
-				bodyDef.linearDamping = g_physics_data.linear_damping;
-			fixDef.density = 0.239999995;
-			if(g_physics_data.friction)
-				fixDef.friction = g_physics_data.friction;
-			if(g_physics_data.restitution)
-				fixDef.restitution = g_physics_data.restitution;
+             fixDef.density = 1;
+             fixDef.friction = 0.5;
+             fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_dynamicBody;
                 fixDef.shape = new b2PolygonShape;
                     fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
@@ -240,7 +226,6 @@ function start(resolution)
                         this.parent.removeComponent(this);
                     }
                 }
-                __physics2 = this.__physics2;
             if (this.init)
                 this.init();
             },
@@ -255,21 +240,13 @@ function start(resolution)
         src? src : "images/wheel.png"        );
         this.events = new ms.event.EventHolder(); 
                 this.size(10, 20);
-                var __physics3;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
                         g_world.DestroyBody(cmp.physics);
-			if(g_physics_data.angular_damping)
-				bodyDef.angularDamping = g_physics_data.angular_damping;
-			if(g_physics_data.linear_damping)
-				bodyDef.linearDamping = g_physics_data.linear_damping;
-			if(g_physics_data.density)
-				fixDef.density = g_physics_data.density;
-			if(g_physics_data.friction)
-				fixDef.friction = g_physics_data.friction;
-			if(g_physics_data.restitution)
-				fixDef.restitution = g_physics_data.restitution;
+             fixDef.density = 1;
+             fixDef.friction = 0.5;
+             fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_dynamicBody;
                 fixDef.shape = new b2PolygonShape;
                     fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
@@ -294,7 +271,6 @@ function start(resolution)
                         this.parent.removeComponent(this);
                     }
                 }
-                __physics3 = this.__physics3;
             if (this.init)
                 this.init();
             },
@@ -309,21 +285,13 @@ function start(resolution)
         src? src : "images/box.png"        );
         this.events = new ms.event.EventHolder(); 
                 this.size(100, 100);
-                var __physics1;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
                         g_world.DestroyBody(cmp.physics);
-			if(g_physics_data.angular_damping)
-				bodyDef.angularDamping = g_physics_data.angular_damping;
-			if(g_physics_data.linear_damping)
-				bodyDef.linearDamping = g_physics_data.linear_damping;
-			if(g_physics_data.density)
-				fixDef.density = g_physics_data.density;
-			if(g_physics_data.friction)
-				fixDef.friction = g_physics_data.friction;
-			if(g_physics_data.restitution)
-				fixDef.restitution = g_physics_data.restitution;
+             fixDef.density = 1;
+             fixDef.friction = 0.5;
+             fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_dynamicBody;
                 fixDef.shape = new b2PolygonShape;
                     fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
@@ -348,7 +316,6 @@ function start(resolution)
                         this.parent.removeComponent(this);
                     }
                 }
-                __physics1 = this.__physics1;
             if (this.init)
                 this.init();
             },
@@ -371,6 +338,99 @@ function start(resolution)
                 this.init();
             },
 });
+window.onload = function() 
+{
+	drawingCanvas = document.getElementById("myCanvas");
+    g_canvas = drawingCanvas;
+	if (drawingCanvas && drawingCanvas.getContext)
+	{
+		var client =
+		{
+			width: 800,
+			height: 600,
+			canvas: drawingCanvas
+		};
+		var ui = new ms.ui.Manager(client, streamer);
+		g_ui = ui;
+        g_ui_root = ui.root;
+     	ui.load_resources(function()
+		{
+	drawingCanvas.onmousemove = function(ev)
+	{
+		ui.mousemove(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmousedown = function(ev)
+	{
+		ui.mousedown(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmouseup = function(ev)
+	{
+		ui.mouseup(ev.clientX, ev.clientY);                  
+	};	
+		    car_1 = new car( 
+	    "images/car.png",g_ui_root.manager, g_ui_root);
+        var car_1 = car_1;
+                car_1.rect(300, 200, 50, 100);
+		    right_wheel = new wheel( 
+	    "images/wheel.png",g_ui_root.manager, g_ui_root);
+        var right_wheel = right_wheel;
+                right_wheel.rect(345, 220, 10, 20);
+		    right_rear_wheel = new wheel( 
+	    "images/wheel.png",g_ui_root.manager, g_ui_root);
+        var right_rear_wheel = right_rear_wheel;
+                right_rear_wheel.rect(345, 260, 10, 20);
+		    left_wheel = new wheel( 
+	    "images/wheel.png",g_ui_root.manager, g_ui_root);
+        var left_wheel = left_wheel;
+                left_wheel.rect(295, 220, 10, 20);
+		    left_rear_wheel = new wheel( 
+	    "images/wheel.png",g_ui_root.manager, g_ui_root);
+        var left_rear_wheel = left_rear_wheel;
+                left_rear_wheel.rect(295, 260, 10, 20);
+		    box_1 = new box( 
+	    "images/box.png",g_ui_root.manager, g_ui_root);
+        var box_1 = box_1;
+                box_1.rect(400, 300, 100, 100);
+		    box_2 = new box( 
+	    "images/box.png",g_ui_root.manager, g_ui_root);
+        var box_2 = box_2;
+                box_2.rect(400, 100, 100, 100);
+		    box_3 = new box( 
+	    "images/box.png",g_ui_root.manager, g_ui_root);
+        var box_3 = box_3;
+                box_3.rect(200, 300, 100, 100);
+		    box_4 = new box( 
+	    "images/box.png",g_ui_root.manager, g_ui_root);
+        var box_4 = box_4;
+                box_4.rect(100, 100, 100, 100);
+right_wheel_joint = 
+new ms.joint.RevoluteJoint(
+car_1,right_wheel);
+                right_wheel_joint.joint.EnableMotor(1);
+                right_wheel_joint.joint.SetMaxMotorTorque(100000);
+                right_wheel_joint.joint.EnableLimit(1);
+                right_wheel_joint.set_lower_angle(-60);
+                right_wheel_joint.set_upper_angle(60);
+left_wheel_joint = 
+new ms.joint.RevoluteJoint(
+car_1,left_wheel);
+                left_wheel_joint.joint.EnableMotor(1);
+                left_wheel_joint.joint.SetMaxMotorTorque(100000);
+                left_wheel_joint.joint.EnableLimit(1);
+                left_wheel_joint.set_lower_angle(-60);
+                left_wheel_joint.set_upper_angle(60);
+right_rear_wheel_joint = 
+new ms.joint.PrismaticJoint(
+car_1,right_rear_wheel,X_AXIS);
+                right_rear_wheel_joint.joint.EnableLimit(1);
+                right_rear_wheel_joint.set_lower_limit(0);
+                right_rear_wheel_joint.set_upper_limit(0);
+left_rear_wheel_joint = 
+new ms.joint.PrismaticJoint(
+car_1,left_rear_wheel,X_AXIS);
+                left_rear_wheel_joint.joint.EnableLimit(1);
+                left_rear_wheel_joint.set_lower_limit(0);
+                left_rear_wheel_joint.set_upper_limit(0);
                 application.steering_angle = 0;
                 application.max_steer_angle = 60;
                 application.steer_speed = 0.00999999978;
@@ -462,90 +522,6 @@ application.steer_speed = 1;
 }
 	}
 	);
-window.onload = function() 
-{
-	drawingCanvas = document.getElementById("myCanvas");
-    g_canvas = drawingCanvas;
-	if (drawingCanvas && drawingCanvas.getContext)
-	{
-		var client =
-		{
-			width: 800,
-			height: 600,
-			canvas: drawingCanvas
-		};
-		var ui = new ms.ui.Manager(client, streamer);
-		g_ui = ui;
-        g_ui_root = ui.root;
-     	ui.load_resources(function()
-		{
-	drawingCanvas.onmousemove = function(ev)
-	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
-	};
-	drawingCanvas.onmousedown = function(ev)
-	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
-	};
-	drawingCanvas.onmouseup = function(ev)
-	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
-		    car_1 = new car( 
-	    "images/car.png",g_ui_root.manager, g_ui_root);
-                car_1.rect(300, 200, 50, 100);
-		    right_wheel = new wheel( 
-	    "images/wheel.png",g_ui_root.manager, g_ui_root);
-                right_wheel.rect(345, 220, 10, 20);
-		    right_rear_wheel = new wheel( 
-	    "images/wheel.png",g_ui_root.manager, g_ui_root);
-                right_rear_wheel.rect(345, 260, 10, 20);
-		    left_wheel = new wheel( 
-	    "images/wheel.png",g_ui_root.manager, g_ui_root);
-                left_wheel.rect(295, 220, 10, 20);
-		    left_rear_wheel = new wheel( 
-	    "images/wheel.png",g_ui_root.manager, g_ui_root);
-                left_rear_wheel.rect(295, 260, 10, 20);
-		    box_1 = new box( 
-	    "images/box.png",g_ui_root.manager, g_ui_root);
-                box_1.rect(400, 300, 100, 100);
-		    box_2 = new box( 
-	    "images/box.png",g_ui_root.manager, g_ui_root);
-                box_2.rect(400, 100, 100, 100);
-		    box_3 = new box( 
-	    "images/box.png",g_ui_root.manager, g_ui_root);
-                box_3.rect(200, 300, 100, 100);
-		    box_4 = new box( 
-	    "images/box.png",g_ui_root.manager, g_ui_root);
-                box_4.rect(100, 100, 100, 100);
-right_wheel_joint = 
-new ms.joint.RevoluteJoint(
-car_1,right_wheel);
-                right_wheel_joint.joint.EnableMotor(1);
-                right_wheel_joint.joint.SetMaxMotorTorque(100000);
-                right_wheel_joint.joint.EnableLimit(1);
-                right_wheel_joint.set_lower_angle(-60);
-                right_wheel_joint.set_upper_angle(60);
-left_wheel_joint = 
-new ms.joint.RevoluteJoint(
-car_1,left_wheel);
-                left_wheel_joint.joint.EnableMotor(1);
-                left_wheel_joint.joint.SetMaxMotorTorque(100000);
-                left_wheel_joint.joint.EnableLimit(1);
-                left_wheel_joint.set_lower_angle(-60);
-                left_wheel_joint.set_upper_angle(60);
-right_rear_wheel_joint = 
-new ms.joint.PrismaticJoint(
-car_1,right_rear_wheel,X_AXIS);
-                right_rear_wheel_joint.joint.EnableLimit(1);
-                right_rear_wheel_joint.set_lower_limit(0);
-                right_rear_wheel_joint.set_upper_limit(0);
-left_rear_wheel_joint = 
-new ms.joint.PrismaticJoint(
-car_1,left_rear_wheel,X_AXIS);
-                left_rear_wheel_joint.joint.EnableLimit(1);
-                left_rear_wheel_joint.set_lower_limit(0);
-                left_rear_wheel_joint.set_upper_limit(0);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
