--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -9,6 +9,9 @@
 <script type="text/javascript" src="../js/ms-ui.js"></script>
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
+<script type="text/javascript" src="../js/ms-event.js"></script>
+<script type="text/javascript" src="../js/keys.js"></script>
+<script type="text/javascript" src="../js/colors.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -17,6 +20,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+application.events = new ms.event.EventHolder();
 var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
@@ -112,10 +116,9 @@ function start(resolution)
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
-	}
+	}    
 	window.setTimeout(updater, resolution);  
 }  
-                application.clicks = 0;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -147,70 +150,92 @@ window.onload = function()
 	};	
 		    main = new ms.ui.Switch( 
 	    g_ui_root.manager, g_ui_root);
+        var main = main;
                 main.rect(0, 0, 600, 250);
 		    test1 = new ms.ui.Component( 
 	    main.manager, main);test1.mouse_thru = true;
+        var test1 = test1;
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",test1.manager, test1);
+        var lbl1 = lbl1;
                 lbl1.set_rotation(-0.200000003);
                 lbl1.text("click smiley");
                 lbl1.position(270, 200);
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",test1.manager, test1);
+        var btn1 = btn1;
                 btn1.set_rotation(0.200000003);
-	btn1.click = function()
+	var ev_parent = this;
+	btn1.events.addListener("click", function()
 	{    
 		application.clicks = application.clicks + 1;
 lbl1.text("Got " + application.clicks + " smileys");
 btn1.set_rotation(btn1.get_rotation() + 0.200000003);
-	};
+	}
+	);
  btn1.center(50, 50); 
 		    test2 = new ms.ui.Component( 
 	    main.manager, main);test2.mouse_thru = true;
+        var test2 = test2;
 		    pb1 = new ms.ui.ProgressBar( 
 	    null,test2.manager, test2);
+        var pb1 = pb1;
  pb1.center(150, 10); 
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_left.png",test2.manager, test2);
-	btn2.click = function()
+        var btn2 = btn2;
+	var ev_parent = this;
+	btn2.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() - 1);
-	};
+	}
+	);
                 btn2.rect(200, 115, 20, 20);
 		    btn3 = new ms.ui.Image( 
 	    "images/arrow_right.png",test2.manager, test2);
-	btn3.click = function()
+        var btn3 = btn3;
+	var ev_parent = this;
+	btn3.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() + 1);
-	};
+	}
+	);
                 btn3.rect(380, 115, 20, 20);
 		    lbl2 = new ms.ui.Label( 
 	    "Verdana",test2.manager, test2);
+        var lbl2 = lbl2;
                 lbl2.set_rotation(0.200000003);
                 lbl2.text("click small arrows to adjust percentage");
                 lbl2.position(210, 200);
 		    btnNext = new ms.ui.Button( 
 	    "images/arrow_right_green_48.png","images/arrow_right_48.png",g_ui_root.manager, g_ui_root);
-	btnNext.click = function()
+        var btnNext = btnNext;
+	var ev_parent = this;
+	btnNext.events.addListener("click", function()
 	{    
 		if (main.get_active() < main.count() - 1)
 {
 main.active(main.get_active() + 1);
 }
 btnNext.set_rotation(btnNext.get_rotation() + 0.200000003);
-	};
+	}
+	);
                 btnNext.rect(320, 300, 100, 50);
 		    btnPrev = new ms.ui.Button( 
 	    "images/arrow_left_green_48.png","images/arrow_left_48.png",g_ui_root.manager, g_ui_root);
+        var btnPrev = btnPrev;
                 btnPrev.set_rotation(0.400000006);
-	btnPrev.click = function()
+	var ev_parent = this;
+	btnPrev.events.addListener("click", function()
 	{    
 		if (main.get_active() > 0)
 {
 main.active(main.get_active() - 1);
 }
-	};
+	}
+	);
                 btnPrev.rect(220, 300, 50, 50);
+                application.clicks = 0;
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -238,8 +263,5 @@ main.active(main.get_active() - 1);
 	<canvas id="myCanvas" width="600" height="400">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
-	<audio id="sounds" preload> 
-	Your browser does not support the audio element.
-	</audio>
 </body>
 </html>
