--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -134,10 +134,9 @@ function start(resolution)
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
-	}
+	}    
 	window.setTimeout(updater, resolution);  
 }  
-                application.curr_sound = null;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -169,10 +168,12 @@ window.onload = function()
 	};	
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
+        var lbl1 = lbl1;
                 lbl1.text("click the sound you want to listen");
                 lbl1.position(220, 190);
 		    btnSound1 = new ms.ui.Button( 
 	    "images/sound_2.png","images/sound_2.png",g_ui_root.manager, g_ui_root);
+        var btnSound1 = btnSound1;
 	var ev_parent = this;
 	btnSound1.events.addListener("click", function()
 	{    
@@ -185,6 +186,7 @@ application.curr_sound.play();
                 btnSound1.rect(275, 210, 50, 10);
 		    btnSound2 = new ms.ui.Button( 
 	    "images/sound_1.png","images/sound_1.png",g_ui_root.manager, g_ui_root);
+        var btnSound2 = btnSound2;
 	var ev_parent = this;
 	btnSound2.events.addListener("click", function()
 	{    
@@ -197,10 +199,12 @@ application.curr_sound.play();
                 btnSound2.rect(275, 240, 50, 10);
 		    volume_bar = new ms.ui.ProgressBar( 
 	    null,g_ui_root.manager, g_ui_root);
+        var volume_bar = volume_bar;
                 volume_bar.value(50);
                 volume_bar.rect(225, 120, 150, 10);
 		    btn1 = new ms.ui.Image( 
 	    "images/arrow_left.png",g_ui_root.manager, g_ui_root);
+        var btn1 = btn1;
 	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
@@ -211,6 +215,7 @@ application.curr_sound.volume -= 0.100000001;
                 btn1.rect(200, 115, 20, 20);
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_right.png",g_ui_root.manager, g_ui_root);
+        var btn2 = btn2;
 	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
@@ -221,10 +226,12 @@ application.curr_sound.volume += 0.100000001;
                 btn2.rect(380, 115, 20, 20);
 		    lbl3 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
+        var lbl3 = lbl3;
                 lbl3.text("click small arrows to adjust volume");
                 lbl3.position(220, 100);
 		    btnPlay = new ms.ui.Button( 
 	    "images/play.png","images/play_over.png",g_ui_root.manager, g_ui_root);
+        var btnPlay = btnPlay;
 	var ev_parent = this;
 	btnPlay.events.addListener("click", function()
 	{    
@@ -234,6 +241,7 @@ application.curr_sound.volume += 0.100000001;
                 btnPlay.rect(175, 300, 50, 50);
 		    btnPause = new ms.ui.Button( 
 	    "images/pause.png","images/pause_over.png",g_ui_root.manager, g_ui_root);
+        var btnPause = btnPause;
 	var ev_parent = this;
 	btnPause.events.addListener("click", function()
 	{    
@@ -243,6 +251,7 @@ application.curr_sound.volume += 0.100000001;
                 btnPause.rect(275, 300, 50, 50);
 		    btnStop = new ms.ui.Button( 
 	    "images/stop.png","images/stop_over.png",g_ui_root.manager, g_ui_root);
+        var btnStop = btnStop;
 	var ev_parent = this;
 	btnStop.events.addListener("click", function()
 	{    
@@ -258,6 +267,7 @@ application.curr_sound.currentTime = 0;
 	var sound_2 = 
 	document.createElement('audio');
 	sound_2.setAttribute('src', 'sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg');	
+                application.curr_sound = null;
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
