--- a/xss/production/test/ui_audio_1.html
+++ b/xss/production/test/ui_audio_1.html
@@ -86,7 +86,7 @@ function start(resolution)
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
-	}
+	}    
 	window.setTimeout(updater, resolution);  
 }  
 window.onload = function() 
@@ -120,10 +120,12 @@ window.onload = function()
 	};	
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
+        var lbl1 = lbl1;
                 lbl1.text("click to create a new instance of a sound");
                 lbl1.position(220, 190);
 		    btnExplosion = new ms.ui.Button( 
 	    "images/bomb.png","images/bomb.png",g_ui_root.manager, g_ui_root);
+        var btnExplosion = btnExplosion;
 	var ev_parent = this;
 	btnExplosion.events.addListener("click", function()
 	{    
@@ -133,6 +135,7 @@ window.onload = function()
                 btnExplosion.rect(290, 220, 50, 50);
 		    btnShoots = new ms.ui.Button( 
 	    "images/AK-47.png","images/AK-47.png",g_ui_root.manager, g_ui_root);
+        var btnShoots = btnShoots;
 	var ev_parent = this;
 	btnShoots.events.addListener("click", function()
 	{    
