--- a/xss/production/test/ui_class_test.html
+++ b/xss/production/test/ui_class_test.html
@@ -56,7 +56,7 @@ function start(resolution)
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
-	}
+	}    
 	window.setTimeout(updater, resolution);  
 }  
             my_image = Class.create(ms.ui.Image,
@@ -91,16 +91,6 @@ ev_parent.img2.rect(ev_parent.x_pos + 50, ev_parent.y_pos - 50, 50, 50);
                 this.init();
             },
 });
-                application.test = null;
-                application.x_pos = 100;
-                application.y_pos = 100;
-                application.X_MAX = 600;
-                application.Y_MAX = 400;
-                application.img2 = null;
-	application.init = function() 
-	{
-		application.test = 1;
-	};
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -132,6 +122,7 @@ window.onload = function()
 	};	
 		    img1 = new ms.ui.Image( 
 	    "images/img1.png",g_ui_root.manager, g_ui_root);
+        var img1 = img1;
 	var ev_parent = this;
 	img1.events.addListener("click", function()
 	{    
@@ -153,6 +144,16 @@ application.img2.rect(application.x_pos, application.y_pos, 50, 50);
 	}
 	);
                 img1.rect(100, 100, 50, 50);
+                application.test = null;
+                application.x_pos = 100;
+                application.y_pos = 100;
+                application.X_MAX = 600;
+                application.Y_MAX = 400;
+                application.img2 = null;
+	application.init = function() 
+	{
+		application.test = 1;
+	};
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
