--- a/xss/production/test/ui_cliparea.html
+++ b/xss/production/test/ui_cliparea.html
@@ -62,9 +62,90 @@ function start(resolution)
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
-	}
+	}    
 	window.setTimeout(updater, resolution);  
 }  
+window.onload = function() 
+{
+	drawingCanvas = document.getElementById("myCanvas");
+    g_canvas = drawingCanvas;
+	if (drawingCanvas && drawingCanvas.getContext)
+	{
+		var client =
+		{
+			width: 600,
+			height: 600,
+			canvas: drawingCanvas
+		};
+		var ui = new ms.ui.Manager(client, streamer);
+		g_ui = ui;
+        g_ui_root = ui.root;
+     	ui.load_resources(function()
+		{
+	drawingCanvas.onmousemove = function(ev)
+	{
+		ui.mousemove(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmousedown = function(ev)
+	{
+		ui.mousedown(ev.clientX, ev.clientY);                  
+	};
+	drawingCanvas.onmouseup = function(ev)
+	{
+		ui.mouseup(ev.clientX, ev.clientY);                  
+	};	
+		    div1 = new ms.ui.Component( 
+	    g_ui_root.manager, g_ui_root);div1.mouse_thru = true;
+        var div1 = div1;
+                div1.rect(150, 0, 400, 200);
+		    ca1 = new ms.ui.ClipArea( 
+	    "rect",div1.manager, div1);ca1.mouse_thru = true;
+        var ca1 = ca1;
+                ca1.form = "rect";
+                ca1.rect(90, 60, 100, 120);
+		    __label1 = new ms.ui.Label( 
+	    "Verdana",div1.manager, div1);
+        var __label1 = __label1;
+                __label1.text("use arrows to move the clip area");
+                __label1.position(40, 75);
+		    lbl1 = new ms.ui.Label( 
+	    "Verdana",div1.manager, div1);
+        var lbl1 = lbl1;
+                lbl1.text("click smiley");
+                lbl1.position(100, 90);
+		    ca2 = new ms.ui.ClipArea( 
+	    "circle",div1.manager, div1);ca2.mouse_thru = true;
+        var ca2 = ca2;
+                ca2.form = "circle";
+                ca2.rect(100, 60, 100, 100);
+		    btn1 = new ms.ui.Button( 
+	    "images/smile_sad_48.png","images/smile_grin_48.png",div1.manager, div1);
+        var btn1 = btn1;
+                btn1.set_rotation(10);
+	var ev_parent = this;
+	btn1.events.addListener("click", function()
+	{    
+		lbl1.text("Got " + application.clicks + " smileys");
+btn1.set_rotation(btn1.get_rotation() + 10);
+application.clicks = application.clicks + 1;
+	}
+	);
+                btn1.rect(90, 100, 50, 50);
+		    btn2 = new ms.ui.Button( 
+	    "images/smile_sad_48.png","images/smile_grin_48.png",div1.manager, div1);
+        var btn2 = btn2;
+                btn2.set_rotation(10);
+                btn2.rect(150, 100, 50, 50);
+		    stateBtn = new ms.ui.StateButton( 
+	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
+        var stateBtn = stateBtn;
+                stateBtn.set_rotation(-45);
+                stateBtn.rect(270, 200, 50, 50);
+		    lbl3 = new ms.ui.Label( 
+	    "Verdana",g_ui_root.manager, g_ui_root);
+        var lbl3 = lbl3;
+                lbl3.text("this smile is a state button, click it");
+                lbl3.position(330, 240);
                 application.clicks = 0;
 	var ev_parent = this;
 	application.events.addListener("keydown", function(keycode)
@@ -109,78 +190,6 @@ ca2.set_y(ca2.y + 2);
 }
 	}
 	);
-window.onload = function() 
-{
-	drawingCanvas = document.getElementById("myCanvas");
-    g_canvas = drawingCanvas;
-	if (drawingCanvas && drawingCanvas.getContext)
-	{
-		var client =
-		{
-			width: 600,
-			height: 600,
-			canvas: drawingCanvas
-		};
-		var ui = new ms.ui.Manager(client, streamer);
-		g_ui = ui;
-        g_ui_root = ui.root;
-     	ui.load_resources(function()
-		{
-	drawingCanvas.onmousemove = function(ev)
-	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
-	};
-	drawingCanvas.onmousedown = function(ev)
-	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
-	};
-	drawingCanvas.onmouseup = function(ev)
-	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
-		    div1 = new ms.ui.Component( 
-	    g_ui_root.manager, g_ui_root);div1.mouse_thru = true;
-                div1.rect(150, 0, 400, 200);
-		    ca1 = new ms.ui.ClipArea( 
-	    "rect",div1.manager, div1);ca1.mouse_thru = true;
-                ca1.form = "rect";
-                ca1.rect(90, 60, 100, 120);
-		    __label1 = new ms.ui.Label( 
-	    "Verdana",div1.manager, div1);
-                __label1.text("use arrows to move the clip area");
-                __label1.position(40, 75);
-		    lbl1 = new ms.ui.Label( 
-	    "Verdana",div1.manager, div1);
-                lbl1.text("click smiley");
-                lbl1.position(100, 90);
-		    ca2 = new ms.ui.ClipArea( 
-	    "circle",div1.manager, div1);ca2.mouse_thru = true;
-                ca2.form = "circle";
-                ca2.rect(100, 60, 100, 100);
-		    btn1 = new ms.ui.Button( 
-	    "images/smile_sad_48.png","images/smile_grin_48.png",div1.manager, div1);
-                btn1.set_rotation(10);
-	var ev_parent = this;
-	btn1.events.addListener("click", function()
-	{    
-		lbl1.text("Got " + application.clicks + " smileys");
-btn1.set_rotation(btn1.get_rotation() + 10);
-application.clicks = application.clicks + 1;
-	}
-	);
-                btn1.rect(90, 100, 50, 50);
-		    btn2 = new ms.ui.Button( 
-	    "images/smile_sad_48.png","images/smile_grin_48.png",div1.manager, div1);
-                btn2.set_rotation(10);
-                btn2.rect(150, 100, 50, 50);
-		    stateBtn = new ms.ui.StateButton( 
-	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
-                stateBtn.set_rotation(-45);
-                stateBtn.rect(270, 200, 50, 50);
-		    lbl3 = new ms.ui.Label( 
-	    "Verdana",g_ui_root.manager, g_ui_root);
-                lbl3.text("this smile is a state button, click it");
-                lbl3.position(330, 240);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
