--- a/xss/production/test/wgl_model.html
+++ b/xss/production/test/wgl_model.html
@@ -6,7 +6,7 @@
 <body>
 <style type="text/css">
 	body{
-	background:RoyalBlue;
+	background:#356;
 	}
 </style>
 <script type="text/javascript" src="../js/three/Detector.js"></script>
@@ -81,24 +81,25 @@ new THREE.Camera(
                 camera_1.position.z = 500;
 var a_ligth = 
 new THREE.AmbientLight(
-Salmon);
+2232576);
 		;
 	scene.addLight(a_ligth);
 var d_ligth_1 = 
 new THREE.DirectionalLight(
-Ivory);
+16772829);
 		;
 	scene.addLight(d_ligth_1);
                 d_ligth_1.position.y = -70;
                 d_ligth_1.position.z = 100;
-	var male_model;
+	var male_model = new THREE.Object3D();
 	var male_model_loader = 
 	generate_model_loader(streamer.get_resource('model/male02/Male02_slim.js').type);
 		male_model_loader.load(
 		{
 				model : streamer.get_resource('model/male02/Male02_slim.js').asset , callback : function( geometry )
 			{
-				male_model = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
+				var male_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
+				male_model.addChild(male_model_mesh);
                 male_model.position.x = 120;
                 male_model.position.y = -350;
                 male_model.position.z = -350;
@@ -108,7 +109,8 @@ Ivory);
 				scene.addObject(male_model);
 			} 
 		} 
-	);	
+	);
+	male_model.events = new ms.event.EventHolder();
 	var ev_parent = this;
 	male_model.events.addListener("click", function()
 	{    
@@ -116,14 +118,15 @@ Ivory);
 	}
 	);
 		application.are_obj_events = true;
-	var female_model;
+	var female_model = new THREE.Object3D();
 	var female_model_loader = 
 	generate_model_loader(streamer.get_resource('model_1').type);
 		female_model_loader.load(
 		{
 				model : streamer.get_resource('model_1').asset , callback : function( geometry )
 			{
-				female_model = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
+				var female_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
+				female_model.addChild(female_model_mesh);
                 female_model.position.x = -110;
                 female_model.position.y = -350;
                 female_model.position.z = -350;
@@ -133,7 +136,8 @@ Ivory);
 				scene.addObject(female_model);
 			} 
 		} 
-	);	
+	);
+	female_model.events = new ms.event.EventHolder();
 	var ev_parent = this;
 	female_model.events.addListener("click", function()
 	{    
@@ -144,7 +148,7 @@ Ivory);
                 application.mouse_x = null;
                 application.mouse_y = null;
 	var ev_parent = this;
-	application.events.addListener("animate", function()
+	application.events.addListener("updates", function()
 	{    
 		camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
 camera_1.position.y = camera_1.position.y + (-application.mouse_y - camera_1.position.y) * 0.0500000007;
