--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -187,6 +187,7 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
 var btn1;
+                application.i = 0;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
